--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,23 +44,15 @@ generate_parameter_library(whole_body_controller_parameters
 generate_parameter_library(cartesian_position_controller_parameters
   src/cartesian_position_controller_parameters.yaml
 )
+generate_parameter_library(joint_position_controller_parameters
+  src/joint_position_controller_parameters.yaml
+)
 
 add_library(wbc_ros SHARED src/whole_body_controller.cpp src/conversions.cpp
-                           src/cartesian_position_controller.cpp src/conversions.cpp)
-#add_library(loop_back_driver_node SHARED src/loop_back_driver_node.cpp)
-#add_library(cartesian_position_controller_node SHARED src/controllers/cartesian_position_controller_node.cpp src/controllers/controller_node.cpp src/conversions.cpp)
-#add_library(joint_position_controller_node SHARED src/controllers/joint_position_controller_node.cpp  src/controllers/controller_node.cpp src/conversions.cpp)
-#add_library(cartesian_force_controller_node SHARED src/controllers/cartesian_force_controller_node.cpp  src/controllers/controller_node.cpp src/conversions.cpp)
-#add_library(cartesian_radial_potential_fields_node SHARED src/controllers/cartesian_radial_potential_fields_node.cpp  src/controllers/controller_node.cpp src/conversions.cpp)
-#add_library(joint_limit_avoidance_node SHARED src/controllers/joint_limit_avoidance_node.cpp  src/controllers/controller_node.cpp src/conversions.cpp)
+                           src/cartesian_position_controller.cpp src/conversions.cpp
+                           src/joint_position_controller.cpp src/conversions.cpp)
 
 ament_target_dependencies(wbc_ros PUBLIC ${THIS_PACKAGE_INCLUDE_DEPENDS})
-#ament_target_dependencies(loop_back_driver_node rclcpp rclcpp_components trajectory_msgs sensor_msgs)
-#ament_target_dependencies(cartesian_position_controller_node rclcpp rclcpp_components wbc_msgs sensor_msgs trajectory_msgs)
-#ament_target_dependencies(joint_position_controller_node rclcpp rclcpp_components wbc_msgs sensor_msgs trajectory_msgs)
-#ament_target_dependencies(cartesian_force_controller_node rclcpp rclcpp_components wbc_msgs sensor_msgs trajectory_msgs geometry_msgs)
-#ament_target_dependencies(cartesian_radial_potential_fields_node rclcpp_components rclcpp wbc_msgs sensor_msgs trajectory_msgs)
-#ament_target_dependencies(joint_limit_avoidance_node rclcpp rclcpp_components wbc_msgs sensor_msgs trajectory_msgs)
 
 target_link_libraries(wbc_ros PUBLIC dl ${wbc-core_LIBRARIES} ${wbc-controllers_LIBRARIES})
 target_compile_features(wbc_ros PUBLIC cxx_std_17)
@@ -71,32 +63,9 @@ target_include_directories(wbc_ros PUBLIC
 target_link_libraries(wbc_ros PUBLIC
   whole_body_controller_parameters
   cartesian_position_controller_parameters
+  joint_position_controller_parameters
 )
 pluginlib_export_plugin_description_file(controller_interface wbc_plugins.xml)
-
-#target_link_libraries(cartesian_position_controller_node
-#   ${wbc-controllers_LIBRARIES}
-#)
-#target_link_libraries(joint_position_controller_node
-#   ${wbc-controllers_LIBRARIES}
-#)
-#target_link_libraries(cartesian_force_controller_node
-#   ${wbc-controllers_LIBRARIES}
-#)
-#target_link_libraries(cartesian_radial_potential_fields_node
-#    ${wbc-controllers_LIBRARIES}
-#)
-#target_link_libraries(joint_limit_avoidance_node
-#    ${wbc-controllers_LIBRARIES}
-#)
-
-#rclcpp_components_register_node(wbc_node PLUGIN "wbc_ros::WbcNode" EXECUTABLE wbc)
-#rclcpp_components_register_node(loop_back_driver_node PLUGIN "wbc_ros::LoopBackDriverNode" EXECUTABLE loop_back_driver)
-#rclcpp_components_register_node(cartesian_position_controller_node PLUGIN "wbc_ros::CartesianPositionControllerNode" EXECUTABLE cartesian_position_controller)
-#rclcpp_components_register_node(joint_position_controller_node PLUGIN "wbc_ros::JointPositionControllerNode" EXECUTABLE joint_position_controller)
-#rclcpp_components_register_node(cartesian_force_controller_node PLUGIN "wbc_ros::CartesianForceControllerNode" EXECUTABLE cartesian_force_controller)
-#rclcpp_components_register_node(cartesian_radial_potential_fields_node PLUGIN "wbc_ros::CartesianRadialPotentialFieldsNode" EXECUTABLE cartesian_radial_potential_fields)
-#rclcpp_components_register_node(joint_limit_avoidance_node PLUGIN "wbc_ros::JointLimitAvoidanceNode" EXECUTABLE joint_limit_avoidance)#
 
 install(
   DIRECTORY include/
@@ -105,12 +74,7 @@ install(
 install(TARGETS wbc_ros
                 whole_body_controller_parameters
                 cartesian_position_controller_parameters
-                #loop_back_driver_node
-                #cartesian_position_controller_node
-                #joint_position_controller_node
-                #cartesian_force_controller_node
-                #cartesian_radial_potential_fields_node
-                #joint_limit_avoidance_node
+                joint_position_controller_parameters
         EXPORT export_wbc_ros
         RUNTIME DESTINATION bin
         ARCHIVE DESTINATION lib
@@ -131,16 +95,16 @@ ament_package()
 ## Examples ##
 ##############
 
-#add_executable(joint_trajectory_publisher src/examples/joint_trajectory_publisher.cpp)
-#add_executable(cartesian_trajectory_publisher src/examples/cartesian_trajectory_publisher.cpp)
-#add_executable(cartesian_pose_publisher src/examples/cartesian_pose_publisher.cpp)
-#ament_target_dependencies(joint_trajectory_publisher rclcpp trajectory_msgs)
-#ament_target_dependencies(cartesian_trajectory_publisher rclcpp wbc_msgs)
-#ament_target_dependencies(cartesian_pose_publisher rclcpp wbc_msgs)
-#install(TARGETS joint_trajectory_publisher
-#                cartesian_trajectory_publisher
-#                cartesian_pose_publisher
-#        RUNTIME DESTINATION lib/${PROJECT_NAME})
+add_executable(joint_trajectory_publisher src/examples/joint_trajectory_publisher.cpp)
+add_executable(cartesian_trajectory_publisher src/examples/cartesian_trajectory_publisher.cpp)
+add_executable(cartesian_pose_publisher src/examples/cartesian_pose_publisher.cpp)
+ament_target_dependencies(joint_trajectory_publisher rclcpp trajectory_msgs)
+ament_target_dependencies(cartesian_trajectory_publisher rclcpp wbc_msgs)
+ament_target_dependencies(cartesian_pose_publisher rclcpp wbc_msgs)
+install(TARGETS joint_trajectory_publisher
+                cartesian_trajectory_publisher
+                cartesian_pose_publisher
+        RUNTIME DESTINATION lib/${PROJECT_NAME})
 
 
 #############
