Remove old controllers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,34 +111,34 @@ install(TARGETS joint_trajectory_publisher
 ## Testing ##
 #############
 
-#if(BUILD_TESTING)
-#find_package(launch_testing_ament_cmake)
-#add_launch_test(test/simple_launch.test.py)
-#add_launch_test(test/topics.test.py)
-#add_launch_test(test/complex_launch.test.py)
-#add_launch_test(test/solver_output.test.py)
-#install(DIRECTORY test
-#        DESTINATION share/${PROJECT_NAME})
-#endif()
+if(BUILD_TESTING)
+find_package(launch_testing_ament_cmake)
+add_launch_test(test/simple_launch.test.py)
+add_launch_test(test/topics.test.py)
+add_launch_test(test/complex_launch.test.py)
+add_launch_test(test/solver_output.test.py)
+install(DIRECTORY test
+        DESTINATION share/${PROJECT_NAME})
+endif()
 
 #############
 ## Doxygen ##
 #############
 
-#find_package(Doxygen)
-#if(BUILD_DOC)
-#  if(DOXYGEN_FOUND)
-#    set(doxyfile_in ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in)
-#    set(doxyfile ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
-#    configure_file(${doxyfile_in} ${doxyfile} @ONLY)
-#    message("Doxygen build started.")
-#    add_custom_target(doc ALL
-#                      COMMAND ${DOXYGEN_EXECUTABLE} ${doxyfile}
-#                      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-#                     COMMENT "Generating API documentation with Doxygen"
-#                      VERBATIM)
-#   install(DIRECTORY doc/images DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/doc)
-#  else(DOXYGEN_FOUND)
-#     message("Doxygen needs to be installed to generate the doxygen documentation")
-#  endif(DOXYGEN_FOUND)
-#endif (BUILD_DOC)
+find_package(Doxygen)
+if(BUILD_DOC)
+  if(DOXYGEN_FOUND)
+    set(doxyfile_in ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in)
+    set(doxyfile ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
+    configure_file(${doxyfile_in} ${doxyfile} @ONLY)
+    message("Doxygen build started.")
+    add_custom_target(doc ALL
+                      COMMAND ${DOXYGEN_EXECUTABLE} ${doxyfile}
+                      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+                     COMMENT "Generating API documentation with Doxygen"
+                      VERBATIM)
+   install(DIRECTORY doc/images DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/doc)
+  else(DOXYGEN_FOUND)
+     message("Doxygen needs to be installed to generate the doxygen documentation")
+  endif(DOXYGEN_FOUND)
+endif (BUILD_DOC)
