--- a/package.xml
+++ b/package.xml
@@ -23,6 +23,7 @@
   <depend>rclcpp_lifecycle</depend>
   <depend>sensor_msgs</depend>
   <depend>trajectory_msgs</depend>
+  <depend>realtime_tools</depend>
   <depend>std_msgs</depend>
   <depend>generate_parameter_library</depend>
 
