--- a/.github/workflows/build_and_test_ubuntu22.04.yml
+++ b/.github/workflows/build_and_test_ubuntu22.04.yml
@@ -38,6 +38,7 @@ jobs:
        git clone https://github.com/ARC-OPT/wbc_ros.git
        cd ..
        rosdep install --from-paths src/wbc_msgs
+       rosdep install --from-paths src/wbc_ros
        colcon build
     # Run all tests
     - name: test
