Add prefix as WBC parameter to ensure that the correct state and command interfaces are claimed in case a prefix is used in URDF

--- a/config/cartesian_space_example/iiwa_controllers.yaml
+++ b/config/cartesian_space_example/iiwa_controllers.yaml
@@ -21,6 +21,8 @@ whole_body_controller:
         command_interfaces: ["position"]
         # Names of the tasks to be configured in task configuration. Each task will be a summand in the QP solver's cost function.
         task_names: ["ee_pose"]
+        # Prefix used in the robot description parameter to claim the correct state and command interface names.
+        prefix: ""
         # The joint weights control the contribution of each individual joint to the solution. Values have to be within [0,1].
         # A zero means here that the joint is not used at all. Size has to be same as number of robot joints.
         joint_weights: [1.0,1.0,1.0,1.0,1.0,1.0,1.0]
