--- a/config/joint_space_example/iiwa_controllers.yaml
+++ b/config/joint_space_example/iiwa_controllers.yaml
@@ -21,6 +21,8 @@ whole_body_controller:
         command_interfaces: ["position"]
         # Names of the tasks to be configured in task configuration. Each task will be a summand in the QP solver's cost function.
         task_names: ["joint_position"]
+        # Prefix used in the robot description parameter to claim the correct state and command interface names.
+        prefix: ""
         # The joint weights control the contribution of each individual joint to the solution. Values have to be within [0,1].
         # A zero means here that the joint is not used at all. Size has to be same as number of robot joints.
         joint_weights: [1.0,1.0,1.0,1.0,1.0,1.0,1.0]
@@ -41,7 +43,7 @@ whole_body_controller:
                 # and 6 in case of a Cartesian task. All entries have to be >= 0.  Can be used to balance contributions of the task variables.
                 # A value of 0 means that the reference of the corresponding task variable will be ignored while computing the solution.
                 weights: [1.0,1.0,1.0,1.0,1.0,1.0,1.0]
-                 Initial activation for this task. Has to be within 0 and 1. Can be used to enable(1)/disable(0) the whole task,
+                # Initial activation for this task. Has to be within 0 and 1. Can be used to enable(1)/disable(0) the whole task,
                 # or to apply a smooth activation function.
                 activation: 1.0
         solver:
