--- a/src/whole_body_controller_parameters.yaml
+++ b/src/whole_body_controller_parameters.yaml
@@ -14,6 +14,16 @@ whole_body_controller:
         description: "Command interfaces to claim from hardware.",
         validation: {
             not_empty<>: null,
+            unique<>: null,
+        }
+    }
+    state_interfaces: {
+        type: string_array,
+        default_value: [],
+        description: "State interfaces to claim from hardware.",
+        validation: {
+            not_empty<>: null,
+            unique<>: null,
         }
     }
     prefix: {
