--- a/package.xml
+++ b/package.xml
@@ -16,6 +16,7 @@
   <exec_depend>pluginlib</exec_depend>
   
   <depend>geometry_msgs</depend>
+  <depend>wbc_msgs</depend>
   <depend>controller_interface</depend>
   <depend>rclcpp_lifecycle</depend>
   <depend>sensor_msgs</depend>
