--- a/package.xml
+++ b/package.xml
@@ -17,10 +17,13 @@
   
   <depend>geometry_msgs</depend>
   <depend>controller_interface</depend>
+  <depend>controller_manager</depend>
+  <depend>xacro</depend>
   <depend>rclcpp_lifecycle</depend>
   <depend>sensor_msgs</depend>
   <depend>trajectory_msgs</depend>
   <depend>realtime_tools</depend>
+  <depend>joint_state_broadcaster</depend>
   <depend>std_msgs</depend>
   <depend>generate_parameter_library</depend>
 
