--- a/config/null_space_example/iiwa_controllers.yaml
+++ b/config/null_space_example/iiwa_controllers.yaml
@@ -18,10 +18,14 @@ controller_manager:
 
 whole_body_controller:
     ros__parameters:
+        # Update rate in Hz. 
+        update_rate: 1000
         # Control mode of the wbc. Can be one of [velocity,acceleration].
         control_mode: velocity
         # Command interfaces to claim from hardware. Can be one of [position,velocity,effort]
         command_interfaces: ["position"]
+        # State interfaces to claim from hardware. Can be one of [position,velocity,effort,acceleration]
+        state_interfaces: ["position"]            
         # Names of the tasks to be configured in task configuration. Each task will be a summand in the QP solver's cost function.
         task_names: ["ee_pose", "elbow_pose"]
         # Prefix used in the robot description parameter to claim the correct state and command interface names.
@@ -32,8 +36,8 @@ whole_body_controller:
         robot_model:
             # Absolute path to plain URDF file of the robot
             file: install/wbc_ros/share/wbc_ros/models/urdf/iiwa.urdf
-            # Robot model type. Must be the exact name of one of the registered robot model plugins. See src/robot_models for all available plugins. Default is rbdl
-            type: rbdl
+            # Robot model type. Must be the exact name of one of the registered robot model plugins. See src/robot_models for all available plugins. Default is pinocchio
+            type: pinocchio
         tasks:
             ee_pose:
                 # Task type, can be one of 'jnt' (joint space task), 'cart' (Cartesian task) or 'com' (Center of Mass task).
