--- a/package.xml
+++ b/package.xml
@@ -12,20 +12,23 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <build_depend>pluginlib</build_depend>
-
-  <exec_depend>pluginlib</exec_depend>
   
-  <depend>geometry_msgs</depend>
-  <depend>controller_interface</depend>
-  <depend>controller_manager</depend>
-  <depend>xacro</depend>
-  <depend>rclcpp_lifecycle</depend>
-  <depend>sensor_msgs</depend>
-  <depend>trajectory_msgs</depend>
+  <depend>rclcpp</depend>
   <depend>realtime_tools</depend>
-  <depend>joint_state_broadcaster</depend>
   <depend>std_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>trajectory_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>rclcpp_lifecycle</depend>
+  <depend>controller_interface</depend>
+  <depend>hardware_interface</depend>
   <depend>generate_parameter_library</depend>
+  
+  <exec_depend>controller_manager</exec_depend>
+  <exec_depend>xacro</exec_depend>
+  <exec_depend>robot_state_publisher</exec_depend>
+  <exec_depend>joint_state_broadcaster</exec_depend>
+  <exec_depend>pluginlib</exec_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
