--- a/package.xml
+++ b/package.xml
@@ -11,14 +11,13 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <build_depend>pluginlib</build_depend>
-  
   <depend>rclcpp</depend>
   <depend>realtime_tools</depend>
   <depend>std_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>trajectory_msgs</depend>
   <depend>sensor_msgs</depend>
+  <depend>pluginlib</depend>
   <depend>rclcpp_lifecycle</depend>
   <depend>controller_interface</depend>
   <depend>hardware_interface</depend>
@@ -28,7 +27,6 @@
   <exec_depend>xacro</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>joint_state_broadcaster</exec_depend>
-  <exec_depend>pluginlib</exec_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
