--- a/package.xml
+++ b/package.xml
@@ -27,6 +27,7 @@
   <exec_depend>xacro</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>joint_state_broadcaster</exec_depend>
+  <exec_depend>ros2controlcli</exec_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
