--- a/package.xml
+++ b/package.xml
@@ -18,6 +18,7 @@
   <depend>trajectory_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>pluginlib</depend>
+  <depend>wbc_msgs</depend>
   <depend>rclcpp_lifecycle</depend>
   <depend>controller_interface</depend>
   <depend>hardware_interface</depend>
