--- a/.github/workflows/build_and_test_ubuntu22.04.yml
+++ b/.github/workflows/build_and_test_ubuntu22.04.yml
@@ -42,6 +42,6 @@ jobs:
     # Run all tests
     - name: test
       run: |
-        cd ros_ws
+        cd ros2_ws
         source install/setup.bash        
         colcon test --packages-select wbc_ros
