--- a/.github/workflows/build_and_test_ubuntu22.04.yml
+++ b/.github/workflows/build_and_test_ubuntu22.04.yml
@@ -2,9 +2,9 @@ name: Ubuntu 22.04
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, humble ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, humble ]
 
 jobs:
   build_and_test_22_04:
@@ -20,5 +20,6 @@ jobs:
     - uses: ros-tooling/action-ros-ci@v0.3
       with:
         package-name: wbc_ros
+        ref: humble
         target-ros2-distro: humble
         vcs-repo-file-url: https://raw.githubusercontent.com/ARC-OPT/wbc_ros/main/repos.yaml
