--- a/repos.yaml
+++ b/repos.yaml
@@ -2,8 +2,8 @@ repositories:
   wbc_msgs:
     type: git
     url: https://github.com/arc-opt/wbc_msgs.git
-    version: main
+    version: jazzy
   wbc_ros:
     type: git
     url: https://github.com/arc-opt/wbc_ros.git
-    version: main    
+    version: jazzy    
