--- a/config/cartesian_space_example/iiwa_controllers.yaml
+++ b/config/cartesian_space_example/iiwa_controllers.yaml
@@ -38,14 +38,11 @@ whole_body_controller:
         tasks:
             ee_pose:
                 # Task type, can be one of 'jnt' (joint space task), 'cart' (Cartesian task) or 'com' (Center of Mass task).
-                type: cart
+                type: spatial_velocity
                 # Priority of this task. 0 corresponds to the highest priority. Prioritization is only supported by the hls solver.
                 priority: 0
-                # Only Cartesian tasks:  Root frame of the kinematic chain associated with this task. Has to be the name of a valid link in the robot model.
-                # Only robot_model.type=kdl supports root frames, which are not equal to the root of the URDF tree.
-                root: world
                 # Only Cartesian tasks: Tip frame of the kinematic chain associated with this task. Has to be the name of a valid link in the robot model.
-                tip: tool0
+                tip_frame: tool0
                 # Only Cartesian tasks: Reference frame of the task input (frame wrt which the input is expressed).
                 # This has to be the name of a valid link in robot model. If ref_frame != root the input will be transformed to the root frame.
                 ref_frame: world
@@ -77,9 +74,5 @@ cartesian_position_controller:
         p_gain: [5.0,5.0,5.0,5.0,5.0,5.0]
         # D-Gain of the controller, size has to be 6. In case of velcity control mode, this is the feed forward gain
         d_gain: [0.0,0.0,0.0,0.0,0.0,0.0]
-        # Feed forward gain of the controller, size has to be 6.
-        ff_gain: [0.0,0.0,0.0,0.0,0.0,0.0]
         # Controller output saturation per element. Size has to be 6.
         max_control_output: [10.0,10.0,10.0,10.0,10.0,10.0]
-        # Dead zone for the position error per element. Size has to be 6.
-        dead_zone: [0.0,0.0,0.0,0.0,0.0,0.0]
